feature(player-number): set 12 player maximum User can invite up to a maximum of 11 other people to their game, so no game can exceed 12 people in total, and user it notified of the maximum number.

--- a/public/views/question.html
+++ b/public/views/question.html
@@ -3,11 +3,12 @@
     <span ng-bind-html-unsafe="game.curQuestion.text" ng-hide="game.state === 'game ended' || game.state ==='game dissolved' || game.state === 'awaiting players'"></span>
 
     <div id="notifications" ng-if="game.notification" ng-animate="{enter:'animated fadeInLeft', leave:'animated fadeOut'}">{{game.notification}}</div>
+    <div ng-if="game.players.length === game.playerMaxLimit" ng-animate="{enter:'animated fadeInLeft', leave:'animated fadeOut'}">Maximum of {{game.playerMaxLimit}} players are allowed per game</div>
 
     <div id="startGame" ng-show="game.state === 'awaiting players'">
       <div id="finding-players">Finding Players</div>
       <div id="player-count-container">
-        <div id="player-count">{{game.players.length}} / 6 </div>
+        <div id="player-count">{{game.players.length}} / 12 </div>
         <div id="the-word-players"> Players </div>
       </div>
       <div id="loading-container">
