Make changes to landing page layout

--- a/app/views/includes/head.jade
+++ b/app/views/includes/head.jade
@@ -24,9 +24,14 @@ head
   meta(property='fb:admins', content='APP_ADMIN')
 
   link(rel='stylesheet', href='/lib/bootstrap/css/bootstrap.css')
+  link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/css/materialize.min.css')
   link(rel='stylesheet', href='/css/common.css')
   link(rel='stylesheet', href='/css/animate.css')
   link(rel='stylesheet', href='/css/style.css')
+  link(rel='stylesheet', href='/css/layout.css')
+  link(rel='stylesheet', href='/css/frontpgstyle.css')
+  link(rel='stylesheet', href='/lib/bootstrap/css/bootstrap.min.css')
+  link(rel='stylesheet', href='/lib/bootstrap/css/bootstrap.css')
 
 
   //if lt IE 9
