--- a/public/views/index.html
+++ b/public/views/index.html
@@ -35,8 +35,8 @@
       </ul>
     </div>
   </div>
-  <div class="frame col-md-12">
-    <div id="myCarousel" class="carousel slide" data-ride="carousel">
+  <div class="frame col-md-12" ng-controller="carousel">
+    <div uib-carousel  id="myCarousel" class="carousel slide" data-ride="carousel">
       <!-- Indicators -->
       <ol class="carousel-indicators">
         <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
@@ -48,7 +48,7 @@
       <!-- Wrapper for slides -->
       <div class="carousel-inner" role="listbox">
         <div class="item">
-          <img src="../img/slide1.jpg" alt="" height="345">
+          <img src="../img/slide1.jpg" alt="" width="" height="345">
         </div>
 
         <div class="item" id="team">
@@ -82,8 +82,8 @@
         <span class="sr-only">Next</span>
       </a>
     </div>
-
   </div>
+
   <div class="row">
     <div id="sign-up">
       <span ng-hide="showOptions">
