--- a/public/views/index.html
+++ b/public/views/index.html
@@ -1,20 +1,5 @@
-<script type="text/javascript">
-  $(document).ready(function () {
-
-    var ChroMo = '(Chrome)/(\d+)\.(\d+)\.(\d+)\.(\d+) Mobile';
-
-    if (/Android|webOS|CriOs|ChroMo|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent) === false && location.href !== "http://localhost:3000/#!/app")
-
-      //Twitter buttons
-      !function (d, s, id) { var js, fjs = d.getElementsByTagName(s)[0], p = /^http:/.test(d.location) ? 'http' : 'https'; if (!d.getElementById(id)) { js = d.createElement(s); js.id = id; js.src = p + '://platform.twitter.com/widgets.js'; fjs.parentNode.insertBefore(js, fjs); } } (document, 'script', 'twitter-wjs');
-
-  });
-</script>
-
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <script></script>
-<div>
+<div landing id="main-bod">
   <!-- Fixed Logo & Menu Bar Start -->
   <div class="navigationDiv row ">
     <div class="col-md-3 col-xs-12">
@@ -22,94 +7,111 @@
     </div>
     <div class="col-md-3"></div>
     <div class="col-md-6 col-xs-12 nav navmenu">
-      <ul>
-        <li><a href='/'>HOME</a></li>
-        <li><a href='https://www.crowdrise.com/donate/project/cfhio/cards4humanity/?widget=true'>CHARITY</a></li>
-        <span ng-show="showOptions">
-                  <li><a href="#!/signup">SIGN UP</a></li>
-                  <li><a href="#!/signin">SIGN IN</a></li>
+                    <ul class="wpb-main-menu">
+                <li>
+                  <a href=""  onClick="scroll(0,0)">Home</a>
+</li>
+<li>
+  <a href="" onClick="scroll(0,1411);">Charity</a>
+</li>
+<span ng-show="showOptions">
+                  <li><a href="#!/signup">Sign Up</a></li>
+                  <li><a href="#!/signin">Sign In</a></li>
                 </span>
-        <span ng-hide="showOptions">
-                  <li><a href="/signout">SIGN OUT</a></li>
+<span ng-hide="showOptions">
+                  <li><a href="/signout">Sign Out</a></li>
                 </span>
-      </ul>
+</ul>
     </div>
   </div>
-  <div class="frame col-md-12" ng-controller="carousel">
-    <div uib-carousel  id="myCarousel" class="carousel slide" data-ride="carousel">
-      <!-- Indicators -->
-      <ol class="carousel-indicators">
-        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-        <li data-target="#myCarousel" data-slide-to="1"></li>
-        <li data-target="#myCarousel" data-slide-to="2"></li>
-        <li data-target="#myCarousel" data-slide-to="3"></li>
-      </ol>
+<!-- Fixed Logo & Menu Bar End -->
 
-      <!-- Wrapper for slides -->
-      <div class="carousel-inner" role="listbox">
-        <div class="item">
-          <img src="../img/slide1.jpg" alt="" width="" height="345">
-        </div>
+<!-- Landing Start -->
 
-        <div class="item" id="team">
-          <img src="../img/slide2.jpg" alt="the_team" height="345">
-          <div class="carousel-caption">
-            <h1>The Team</h1>
-            <p>Created with love and tenderness by: <br><a href="http://github.com/silversteez"> Matt Silverstein</a>,
-              <a href="http://github.com/mrngoitall">Will Ngo</a>, <a href="http://github.com/tylermcginnis33">Tyler McGinnis</a>,
-              and <a href="http://github.com/davegonzalez">David Gonzalez</a></p>
-          </div>
 
-        </div>
 
-        <div class="item active">
-          <img src="../img/slide3.jpg" alt="" height="345">
-        </div>
+<!-- Landing End -->
 
-        <div class="item">
-          <img src="../img/slide5.jpg" alt="" height="345">
+
+<!-- How to Play Start -->
+<div class="frame col-md-12" ng-controller="carousel">
+  <div uib-carousel id="myCarousel" class="carousel slide" data-ride="carousel">
+    <!-- Indicators -->
+    <ol class="carousel-indicators">
+      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+      <li data-target="#myCarousel" data-slide-to="1"></li>
+      <li data-target="#myCarousel" data-slide-to="2"></li>
+      <li data-target="#myCarousel" data-slide-to="3"></li>
+    </ol>
+
+    <!-- Wrapper for slides -->
+    <div class="carousel-inner" role="listbox">
+      <div class="item">
+        <img src="../img/slide1.jpg" alt="" width="" height="345">
+      </div>
+
+      <div class="item" id="team">
+        <img src="../img/slide2.jpg" alt="the_team" height="345">
+        <div class="carousel-caption">
+          <h1>The Team</h1>
+          <p>Created with love and tenderness by: <br><a href="http://github.com/silversteez"> Matt Silverstein</a>,
+            <a href="http://github.com/mrngoitall">Will Ngo</a>, <a href="http://github.com/tylermcginnis33">Tyler McGinnis</a>,
+            and <a href="http://github.com/davegonzalez">David Gonzalez</a></p>
         </div>
 
       </div>
 
-      <!-- Left and right controls -->
-      <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
-    </div>
-  </div>
+      <div class="item active">
+        <img src="../img/slide3.jpg" alt="" height="345">
+      </div>
 
-  <div class="row">
-    <div id="sign-up">
-      <span ng-hide="showOptions">
+      <div class="item">
+        <img src="../img/slide5.jpg" alt="" height="345">
+      </div>
+
+    </div>
+
+    <!-- Left and right controls -->
+    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
+</div>
+<!-- How to Play End -->
+
+<!-- Donation Info Start -->
+<div class="row">
+  <div id="sign-up">
+    <span ng-hide="showOptions">
           <a href="/play"><div id="sign-up-btn-landing">Play Game with Strangers</div></a>
           <a href="/play?custom"><div id="sign-up-btn-landing">Play Game with Friends</div></a>
               <span id='twitter-facebook'>
                 <span id="tweet-container-index">
                   <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://cfh.io" data-text="Cards for Humanity: A Game for Horrible People Desperately Trying to do Good" data-related="CFH_App">Tweet</a>
-                <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
-                </span>
-                <span id='facebook-share'>
+                <script>!function (d, s, id) { var js, fjs = d.getElementsByTagName(s)[0], p = /^http:/.test(d.location) ? 'http' : 'https'; if (!d.getElementById(id)) { js = d.createElement(s); js.id = id; js.src = p + '://platform.twitter.com/widgets.js'; fjs.parentNode.insertBefore(js, fjs); } } (document, 'script', 'twitter-wjs');</script>
+</span>
+<span id='facebook-share'>
                     <a href="#"
                       onclick="
                         window.open(
                           'https://www.facebook.com/sharer/sharer.php?u='+encodeURIComponent(location.href),
                           'facebook-share-dialog',
                           'width=626,height=436');
-                        return false;">
-                      Share on Facebook
-                    </a>
-                </span>
-              </span>
-        </span>
-  </div>
-  </section>
+                        return false;"> Share on Facebook
+</a>
+</span>
+</span>
+</span>
 </div>
+</div>
+<!-- Donation Info End -->
+
+<!-- About Us Start -->
 <div class="row" id="charity">
   <div class="row">
     <div>
@@ -147,8 +149,9 @@
     <div class="col-md-2"></div>
   </div>
 </div>
+<!-- About Us End -->
 
-<!-- Footer Starts -->
+<!-- Footer Start -->
 <div class="myfooter footer">
   <div><small class="legal"><p><h4>Legal stuff: </h4> This game is based on the <a href="http://cardsagainsthumanity.com">Cards Against Humanity</a> card game, which is CC licensed (BY-NC-SA). Cards for Humanity is not affiliated with Cards Against Humanity. In complying with the Creative Commons license of the Cards Against Humanity card game, all proceeds from donations go directly to charity, as managed by
   <a href="http://crowdrise.com">crowdrise</a></p></small></div>
@@ -163,4 +166,5 @@
     </div>
   </div>
 </div>
+<!-- Footer End -->
 </div>
