--- a/public/views/index.html
+++ b/public/views/index.html
@@ -1,105 +1,94 @@
 <script type="text/javascript">
-$(document).ready(function() {
+  $(document).ready(function () {
 
-  var ChroMo = '(Chrome)/(\d+)\.(\d+)\.(\d+)\.(\d+) Mobile';
+    var ChroMo = '(Chrome)/(\d+)\.(\d+)\.(\d+)\.(\d+) Mobile';
+    if (
+      /Android|webOS|CriOs|ChroMo|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i
+      .test(navigator.userAgent) === false && location.href !==
+      "http://localhost:3000/#!/app")
 
-  if (/Android|webOS|CriOs|ChroMo|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent) === false && location.href !== "http://localhost:3000/#!/app") {
-    $('body').append('<a href="http://hackreactor.com"><img style="z-index: 10000; position: absolute; top: 0; right: 0; width: 125px; height: 125px; border: 0;" src="http://i.imgur.com/x86kKmF.png" alt="Built at Hack Reactor"></a>');
-  }
-
-  //Twitter buttons
-  !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');
-
+      //Twitter buttons
+      ! function (d, s, id) {
+        var js, fjs = d.getElementsByTagName(s)[0],
+          p = /^http:/.test(d.location) ? 'http' : 'https';
+        if (!d.getElementById(id)) {
+          js = d.createElement(s);
+          js.id = id;
+          js.src = p + '://platform.twitter.com/widgets.js';
+          fjs.parentNode.insertBefore(js, fjs);
+        }
+      }(document, 'script', 'twitter-wjs');
   });
 </script>
-
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <script></script>
-<div landing id="main-bod">
+<div>
   <!-- Fixed Logo & Menu Bar Start -->
-  <div id="top-part">
-    <div class="wpb-top-bar">
-      <div class="mod-contain" id="navver">
-        <div class="row">
-          <!-- Logo -->
-          <div class="wpb-logo-container">
-            <div id="landing-logo">
-              <span id="first-word">Cards</span>
-              <span id="second-word"> for</span>
-              <span id="third-word">Humanity</span>
-            </div>
-            <div class="col-md-9 wpb-menu-container">
-              <ul class="wpb-main-menu">
-                <li><a onClick="scroll(0,0)">Home</a></li>
-                <li><a onClick="scroll(0,742);">How to Play</a></li>
-                <li><a onClick="scroll(0,1411);">Charity</a></li>
-                <li><a onClick="scroll(0,2021);">About Us</a></li>
-                <span ng-show="showOptions">
-                  <li><a href="#!/signup">Sign Up</a></li>
-                  <li><a href="#!/signin">Sign In</a></li>
+  <div class="navigationDiv row ">
+    <div class="col-md-3 col-xs-12">
+      <h2 class="text-center">Cards For Humanity</h2>
+    </div>
+    <div class="col-md-3"></div>
+    <div class="col-md-6 col-xs-12 nav navmenu">
+      <ul>
+        <li><a href='/'>HOME</a></li>
+        <li><a href='https://www.crowdrise.com/donate/project/cfhio/cards4humanity/?widget=true'>CHARITY</a></li>
+        <span ng-show="showOptions">
+                  <li><a href="#!/signup">SIGN UP</a></li>
+                  <li><a href="#!/signin">SIGN IN</a></li>
                 </span>
-                <span ng-hide="showOptions">
-                  <li><a href="/signout">Sign Out</a></li>
+        <span ng-hide="showOptions">
+                  <li><a href="/signout">SIGN OUT</a></li>
                 </span>
-              </ul>
-            </div>
-          </div>
-        </div>
-      </div>
+      </ul>
     </div>
   </div>
-<!-- Fixed Logo & Menu Bar End -->
-
-<!-- Landing Start -->
-  <div class="wpb-teaser parallax-background" id="homer">
-    <div class="background-opacity"></div>
-    <div class="container">
-      <div class="row" id="main-text">
-        <div class="col-md-12" id="avatars" ng-controller="IndexController">
-          <img ng-repeat="avatar in avatars" ng-src="{{avatar}}" id="avatar-face">
+  <div class="frame col-md-12" ng-controller="carousel">
+    <div uib-carousel  id="myCarousel" class="carousel slide" data-ride="carousel">
+      <!-- Indicators -->
+      <ol class="carousel-indicators">
+        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+        <li data-target="#myCarousel" data-slide-to="1"></li>
+        <li data-target="#myCarousel" data-slide-to="2"></li>
+        <li data-target="#myCarousel" data-slide-to="3"></li>
+      </ol>
+      <!-- Wrapper for slides -->
+      <div class="carousel-inner" role="listbox">
+        <div class="item">
+          <img src="../img/slide1.jpg" alt="" width="" height="345">
         </div>
-        <!-- Teaser Slogan Start -->
-        <div class="wpb-slogan">
-          <h2>A Game for Horrible People <span id="third-word">Desperately</span> Trying to do Good</h2>
-        </div>
-        <!-- Teaser Slogan End -->
-
-      <!-- Teaser Text Start -->
-      <div class="wpb-text">
-        <h3 id="slogan">What is Cards for Humanity?</h3>
-        <p>
-          Cards for Humanity is a fast-paced online version of the popular card game, <a href="http://cardsagainsthumanity.com/" target="_blank">Cards Against Humanity</a>, that gives you the opportunity to donate to children in need - all while remaining as despicable and awkward as you naturally are.
-        </p>
-        <p>
-          <span id="warning-word">Warning!</span>  This game contains offensive, profane, explicit content created by <a href="http://cardsagainsthumanity.com/" target="_blank">Cards Against Humanity</a> and provided here, uncensored and complete, in digital form. Human Resources made us say that.
-        </p>
-      </div>
-      <!-- Teaser Text End -->
-      <span id='send-link' ng-show="showOptions"> *To send a private link to your friends, sign up! </span>
-      <div id="sign-up">
-        <span ng-show="showOptions">
-        <a href="#!/signup"><div id="sign-up-btn-landing">Sign Up</div></a>
-          <div id="sign-up-text"><a href="/play">
-            <span id="first-word">or Play</span>
-            <span id="second-word">as</span>
-            <span id="third-word">Guest</span></a>
+        <div class="item" id="team">
+          <img src="../img/slide2.jpg" alt="the_team" height="345">
+          <div class="carousel-caption">
+            <h1>The Team</h1>
+            <p>Created with love and tenderness by: <br><a href="http://github.com/silversteez"> Matt Silverstein</a>,
+              <a href="http://github.com/mrngoitall">Will Ngo</a>, <a href="http://github.com/tylermcginnis33">Tyler McGinnis</a>,
+              and <a href="http://github.com/davegonzalez">David Gonzalez</a></p>
           </div>
-          <span id="tweet-container-index">
-            <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://cfh.io" data-text="Cards for Humanity: A Game for Horrible People Desperately Trying to do Good" data-related="CFH_App">Tweet</a>
-            <a href="https://twitter.com/cfh_app" class="twitter-follow-button" data-show-count="false" data-dnt="true">Follow @cfh_app</a>
-          </span>
-          <span id='facebook-share'>
-              <a href="#"
-                onclick="
-                  window.open(
-                    'https://www.facebook.com/sharer/sharer.php?u='+encodeURIComponent(location.href),
-                    'facebook-share-dialog',
-                    'width=626,height=436');
-                  return false;">
-                Share on Facebook
-              </a>
-          </span>
-        </span>
-        <span ng-hide="showOptions">
+        </div>
+        <div class="item active">
+          <img src="../img/slide3.jpg" alt="" height="345">
+        </div>
+        <div class="item">
+          <img src="../img/slide5.jpg" alt="" height="345">
+        </div>
+      </div>
+      <!-- Left and right controls -->
+      <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
+  </div>
+
+  <div class="row">
+    <div id="sign-up">
+      <span ng-hide="showOptions">
           <a href="/play"><div id="sign-up-btn-landing">Play Game with Strangers</div></a>
           <a href="/play?custom"><div id="sign-up-btn-landing">Play Game with Friends</div></a>
               <span id='twitter-facebook'>
@@ -107,151 +96,73 @@ $(document).ready(function() {
                   <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://cfh.io" data-text="Cards for Humanity: A Game for Horrible People Desperately Trying to do Good" data-related="CFH_App">Tweet</a>
                 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
                 </span>
-                <span id='facebook-share'>
-                    <a href="#"
-                      onclick="
-                        window.open(
-                          'https://www.facebook.com/sharer/sharer.php?u='+encodeURIComponent(location.href),
-                          'facebook-share-dialog',
-                          'width=626,height=436');
-                        return false;">
-                      Share on Facebook
-                    </a>
+      <span ng-hide="showOptions">
+                  <li><a href="/signout">SIGN OUT</a></li>
                 </span>
-              </span>
-        </span>
-       </div>
-      </div>
+      </span>
+      </span>
     </div>
+    </section>
   </div>
-<!-- Landing End -->
-
-
-<!-- How to Play Start -->
-<section id="how-to">
-  <div class="wpb-teaser parallax-background" id="how-to-play">
-    <div class="background-opacity"></div>
-
-    <div class="container" id="how-to-container">
-      <div class="row" id="main-text">
-
-        <!-- Teaser Slogan Start -->
-        <div id="slogan-head">
-          <div class="span6 wpb-slogan">
-            <h2>How to Play</h2>
-          </div>
-        </div>
-        <!-- Teaser Slogan End -->
-
-        <!-- Teaser Text Start -->
-        <div id="card-list">
-          <div id="how-to-cards">
-            <div class="landing-card how-to">Each player begins with, and will always have, 10 white answer cards.</div>
-            <div class="landing-card how-to">For each round, one player is randomly chosen as the Card Czar.</div>
-            <div class="landing-card how-to">Everyone else answers the black question card by clicking on the answer card they want to use.</div>
-            <div class="landing-card how-to">The Card Czar then picks a favorite answer, and whoever played that answer wins the round.</div>
-          </div>
-        </div>
-       <!-- Teaser Text End -->
+  <div class="row" id="charity">
+    <div class="row">
+      <div>
+        <p class="give">
+          "If you don't give back, no one will like you&trade;" - <a href="http://www.crowdrise.com/cfhio/fundraiser/cards4humanity">crowdrise.com</a></p>
       </div>
-
-      <div id="sign-up">
-        <span ng-show="showOptions">
-          <a href="#!/signup"><div id="sign-up-btn-landing">Sign Up</div></a>
-          <div id="sign-up-text"><a href="/play">
-            <span id="first-word">or Play</span>
-            <span id="second-word">as</span>
-            <span id="third-word">Guest</span></a>
-          </div>
-        </span>
-
-        <span ng-hide="showOptions">
-          <a href="#!/app"><div id="sign-up-btn-landing">Join Game</div></a>
-        </span>
-       </div>
     </div>
-</section>
-<!-- How to Play End -->
-
-<!-- Donation Info Start -->
-<section class="wpb-contact-us parallax-background-contact" id="donations">
-   <div class="wpb-teaser parallax-background" id="about-team">
-    <div class="background-opacity"></div>
-
-    <div class="container" id="how-to-container">
-      <div class="row" id="main-text">
-
-        <!-- Teaser Slogan Start -->
-        <div id="slogan-head">
-          <div class="span6 wpb-slogan">
-            <h2>Charity</h2>
-            <h4 id="give">"If you don't give back, no one will like you&trade;" - <a href="http://www.crowdrise.com/cfhio/fundraiser/cards4humanity">crowdrise.com</a></h4>
+    <div class="row">
+      <div class="col-md-2"></div>
+      <div class="col-md-3">
+        <div id="info-box">
+          <div id="landing-image">
+            <div id="landing-charity">
+              <a href="http://www.crowdrise.com/cfhio/fundraiser/cards4humanity" id="crowdriseStaticLink-fundraiser-121142"
+                title="Fundraising Websites on Crowdrise">Fundraising Websites - Crowdrise</a>
+                <script type="text/javascript" src="https://www.crowdrise.com/widgets/donate/fundraiser/121142/?callback=userDonationCb"></script>
+            </div>
           </div>
         </div>
+        <!-- Left and right controls -->
+        <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+          <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+          <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
       </div>
-      <div id="info-box">
-        <div id="landing-image">
-          <div id="landing-charity">
-            <a href="http://www.crowdrise.com/cfhio/fundraiser/cards4humanity" id="crowdriseStaticLink-fundraiser-121142" title="Fundraising Websites on Crowdrise">Fundraising Websites - Crowdrise</a>
-            <script type="text/javascript" src="https://www.crowdrise.com/widgets/donate/fundraiser/121142/?callback=userDonationCb"></script>
-          </div>
-        </div>
+      <div class="col-md-5">
         <div class="some-text">
-            We're quite sure you feel the same way, so we've integrated donation widgets (via <a href="http://www.crowdrise.com/cfhio/fundraiser/cards4humanity">crowdrise.com</a>), along with some not-so-subtle reminders throughout the game to give you the opportunity to donate. If you're signed in when you donate, we'll even upgrade your account and place a crown on your avatar's head (to remind other players how much better you are than them).</p>
-            <p>
+          <p> We're quite sure you feel the same way, so we've integrated donation widgets
+            (via <a href="http://www.crowdrise.com/cfhio/fundraiser/cards4humanity">crowdrise.com</a>),
+            along with some not-so-subtle reminders throughout the game to give you
+            the opportunity to donate. If you're signed in when you donate, we'll
+            even upgrade your account and place a crown on your avatar's head (to
+            remind other players how much better you are than them).</p>
+          <p>
             All donations go to the Make-a-Wish Foundation and benefit children in need.
-            </p>
-            <a href="http://www.wish.org"><img src="img/make-a-wish-logo-white-large.png" id="wish"/></a>
-          </div>
-      </div>
-    </div>
-  </div>
-</section>
-<!-- Donation Info End -->
-
-<!-- About Us Start -->
-<section class="wpb-contact-us parallax-background-contact" id="team">
-   <div class="wpb-teaser parallax-background" id="about-team">
-    <div class="background-opacity"></div>
-
-    <div class="container" id="how-to-container">
-      <div class="row" id="main-text">
-
-        <!-- Teaser Slogan Start -->
-        <div id="slogan-head">
-          <div class="span6 wpb-slogan">
-            <h2>The Team</h2>
-          </div>
+          </p>
+          <a href="http://www.wish.org"><img src="img/make-a-wish-logo-white-large.png" id="wish" /></a>
         </div>
       </div>
-      <div class="wpb-team-details" id="team-names">
-        <h3>Created with love and tenderness by:<br>
-          <a href="http://github.com/silversteez">Matt Silverstein,</a>
-          <a href="http://github.com/mrngoitall">Will Ngo,</a>
-          <a href="http://github.com/tylermcginnis33">Tyler McGinnis,</a> and
-          <a href="http://github.com/davegonzalez">David Gonzalez</a></h3>
-          <h3>XOXO</h3>
-      </div>
-      <img src="img/group-shot.jpg" alt="Team Member" id="team-photo">
+      <div class="col-md-2"></div>
     </div>
   </div>
-</section>
-<!-- About Us End -->
-
-<!-- Footer Start -->
-<section class="foot">
-  <div><small class="legal">Legal stuff: This game is based on the <a href="http://cardsagainsthumanity.com">Cards Against Humanity</a> card game, which is CC licensed (BY-NC-SA). Cards for Humanity is not affiliated with Cards Against Humanity. In complying with the Creative Commons license of the Cards Against Humanity card game, all proceeds from donations go directly to charity, as managed by <a href="http://crowdrise.com">crowdrise</a>.</small></div>
-  <div class="wpb-bottom-bar">
-    <div class="text-left">
+  <!-- Footer Starts -->
+  <div class="myfooter footer">
+    <div><small class="legal"><p><h4>Legal stuff: </h4> This game is based on the <a href="http://cardsagainsthumanity.com">Cards Against Humanity</a> card game, which is CC licensed (BY-NC-SA). Cards for Humanity is not affiliated with Cards Against Humanity. In complying with the Creative Commons license of the Cards Against Humanity card game, all proceeds from donations go directly to charity, as managed by
+  <a href="http://crowdrise.com">crowdrise</a></p></small></div>
+    <h4 class="text-danger"> Warning! </h4>
+    <p>This game contains offensive, profane, explicit content created by Cards Against
+      Humanity and provided here, uncensored and complete, in digital form. Human
+      Resources made us say that.</p>
+    <div class="wpb-bottom-bar">
+      <div class="text-center">
         <a href="https://github.com/cardsforhumanity/cardsforhumanity"><img src="img/github.png" id="gitcat"></a>
         <a href="/#!/privacy">Privacy Policy</a>
-        <div class="floater" id="landing-logo">
-          <span id="first-word">Cards</span>
-          <span id="second-word"> for</span>
-          <span id="third-word">Humanity</span>
-        </div>
       </div>
+    </div>
   </div>
-</section>
-<!-- Footer End -->
 </div>
