--- a/public/views/index.html
+++ b/public/views/index.html
@@ -3,7 +3,7 @@
   <!-- Fixed Logo & Menu Bar Start -->
   <div class="navigationDiv row ">
     <div class="col-md-3 col-xs-12">
-      <h2 class="text-center">Cards For Humanity</h2>
+      <h2 class="text-center logo_head"><a href='./'>Cards For Humanity</a></h2>
     </div>
     <div class="col-md-3"></div>
     <div class="col-md-6 col-xs-12 nav navmenu">
@@ -21,6 +21,8 @@
 <span ng-hide="showOptions">
                   <li><a href="/signout">Sign Out</a></li>
                 </span>
+
+              <li><a href="/play"><button class="play_button btn"> Play </button</a></li>
 </ul>
     </div>
   </div>
@@ -50,16 +52,6 @@
         <img src="../img/slide1.jpg" alt="" width="" height="345">
       </div>
 
-      <div class="item" id="team">
-        <img src="../img/slide2.jpg" alt="the_team" height="345">
-        <div class="carousel-caption">
-          <h1>The Team</h1>
-          <p>Created with love and tenderness by: <br><a href="http://github.com/silversteez"> Matt Silverstein</a>,
-            <a href="http://github.com/mrngoitall">Will Ngo</a>, <a href="http://github.com/tylermcginnis33">Tyler McGinnis</a>,
-            and <a href="http://github.com/davegonzalez">David Gonzalez</a></p>
-        </div>
-
-      </div>
 
       <div class="item active">
         <img src="../img/slide3.jpg" alt="" height="345">
@@ -91,18 +83,18 @@
           <a href="/play"><div id="sign-up-btn-landing">Play Game with Strangers</div></a>
           <a href="/play?custom"><div id="sign-up-btn-landing">Play Game with Friends</div></a>
               <span id='twitter-facebook'>
-                <span id="tweet-container-index">
-                  <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://cfh.io" data-text="Cards for Humanity: A Game for Horrible People Desperately Trying to do Good" data-related="CFH_App">Tweet</a>
+                <span id="">
+                  <a href="https://twitter.com/share" class="share-button" data-url="http://cfh.io" data-text="Cards for Humanity: A Game for Horrible People Desperately Trying to do Good" data-related="CFH_App"><img src="img/twitter.png"/></a>
                 <script>!function (d, s, id) { var js, fjs = d.getElementsByTagName(s)[0], p = /^http:/.test(d.location) ? 'http' : 'https'; if (!d.getElementById(id)) { js = d.createElement(s); js.id = id; js.src = p + '://platform.twitter.com/widgets.js'; fjs.parentNode.insertBefore(js, fjs); } } (document, 'script', 'twitter-wjs');</script>
 </span>
-<span id='facebook-share'>
-                    <a href="#"
+<span>
+                    <a href="#" class="share-button"
                       onclick="
                         window.open(
                           'https://www.facebook.com/sharer/sharer.php?u='+encodeURIComponent(location.href),
                           'facebook-share-dialog',
                           'width=626,height=436');
-                        return false;"> Share on Facebook
+                        return false;"> <img src="img/facebook.png"/>
 </a>
 </span>
 </span>
@@ -112,7 +104,7 @@
 <!-- Donation Info End -->
 
 <!-- About Us Start -->
-<div class="row" id="charity">
+<div class="row" id="charity" >
   <div class="row">
     <div>
       <p class="give">
@@ -133,7 +125,7 @@
       </div>
     </div>
     <div class="col-md-5">
-      <div class="some-text">
+      <div class="some-text" >
         <p> We're quite sure you feel the same way, so we've integrated donation widgets
           (via <a href="http://www.crowdrise.com/cfhio/fundraiser/cards4humanity">crowdrise.com</a>),
           along with some not-so-subtle reminders throughout the game to give you
@@ -153,18 +145,19 @@
 
 <!-- Footer Start -->
 <div class="myfooter footer">
-  <div><small class="legal"><p><h4>Legal stuff: </h4> This game is based on the <a href="http://cardsagainsthumanity.com">Cards Against Humanity</a> card game, which is CC licensed (BY-NC-SA). Cards for Humanity is not affiliated with Cards Against Humanity. In complying with the Creative Commons license of the Cards Against Humanity card game, all proceeds from donations go directly to charity, as managed by
+  <div><small class="legal"><p><h4 class="text-attract">Legal stuff: </h4> This game is based on the <a href="http://cardsagainsthumanity.com">Cards Against Humanity</a> card game, which is CC licensed (BY-NC-SA). Cards for Humanity is not affiliated with Cards Against Humanity. In complying with the Creative Commons license of the Cards Against Humanity card game, all proceeds from donations go directly to charity, as managed by
   <a href="http://crowdrise.com">crowdrise</a></p></small></div>
-  <h4 class="text-danger"> Warning! </h4>
+  <h4 class="text-attract"> Warning! </h4>
   <p>This game contains offensive, profane, explicit content created by Cards Against
     Humanity and provided here, uncensored and complete, in digital form. Human Resources
     made us say that.</p>
-  <div class="wpb-bottom-bar">
-    <div class="text-center">
+
+</div>
+<div class="wpb-bottom-bar">
+    <div class="text-center footer_privacy">
       <a href="https://github.com/cardsforhumanity/cardsforhumanity"><img src="img/github.png" id="gitcat"></a>
       <a href="/#!/privacy">Privacy Policy</a>
     </div>
   </div>
-</div>
 <!-- Footer End -->
 </div>
