--- a/public/views/app.html
+++ b/public/views/app.html
@@ -1,33 +1,48 @@
 </script>
 <div id="app-container" ng-controller="GameController">
-  <div id="menu-container">
-    <div id="logo">
-      <span id="first-word">Cards</span>
-      <span id="second-word"> for</span>
-      <span id="third-word">Humanity</span>
+  <!-- Add home header here-->
+  <!-- Fixed Logo & Menu Bar Start -->
+  <div class="navigationDiv row  padNavBottom">
+    <div class="col-md-3 col-xs-12">
+      <h2 class="text-center logo_head header_text"><a href='./'>Cards For Humanity</a></h2>
     </div>
-    <div id = 'abandon-game-button' ng-click="abandonGame()">
-        Abandon Game
+    <div class="col-md-3"></div>
+    <div class="col-md-6 col-xs-12 nav navmenu">
+      <ul class="wpb-main-menu">
+        <span class="socials_block">
+                  <a href="https://twitter.com/share" class="share-button" data-url="http://cfh.io" data-text="Cards for Humanity: A Game for Horrible People Desperately Trying to do Good" data-related="CFH_App"><img src="img/twitter.png"/></a>
+                <script>!function (d, s, id) { var js, fjs = d.getElementsByTagName(s)[0], p = /^http:/.test(d.location) ? 'http' : 'https'; if (!d.getElementById(id)) { js = d.createElement(s); js.id = id; js.src = p + '://platform.twitter.com/widgets.js'; fjs.parentNode.insertBefore(js, fjs); } } (document, 'script', 'twitter-wjs');</script>
+
+                    <a href="#" class="share-button"
+                      onclick="
+                        window.open(
+                          'https://www.facebook.com/sharer/sharer.php?u='+encodeURIComponent(location.href),
+                          'facebook-share-dialog',
+                          'width=626,height=436');
+                        return false;"> <img src="img/facebook.png"/>
+</a>
+<div id = 'abandon-game-button' class="btn abandon_game_button" ng-click="abandonGame()">
+        Abandon Gaming
     </div>
-        <span id="tweet-container">
-      <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://cfh.io" data-text="Cards for Humanity: A Game for Horrible People Desperately Trying to do Good" data-related="CFH_App">Tweet</a>
-    <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
-    </span>
+    </div>
+
   </div>
-  <div id="gameplay-container">
+<!-- Fixed Logo & Menu Bar End -->
+ <!--- home header ends here -->
+  <div id="gameplay-container" class="upper_game_top_margin">
     <div id="upper-gameplay-container">
       <div id="menu-timeremaining-container">
         <div id="menu-container">
           <span id="menu-button">Menu</span>
-        </div>
-        <div id="timer-container">
-          <timer></timer>
-        </div>
-      </div>
-      <div id="question-container-outer">
-        <question></question>
-      </div>
     </div>
-    <answers></answers>
+    <div id="timer-container">
+      <timer></timer>
+    </div>
   </div>
+  <div id="question-container-outer">
+    <question></question>
+  </div>
+</div>
+<answers></answers>
+</div>
 </div>
