refactor(player-number): improve max & min alert

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,6 +6,14 @@
      font-family: 'entypo', sans-serif;
  }
 
+ .modal-header {
+   text-align: center;
+ }
+
+ .playerLimitAlert {
+   margin-top: 20%;
+ }
+
  .clear {
    clear: both;
  }
