--- a/public/views/answers.html
+++ b/public/views/answers.html
@@ -1,3 +1,23 @@
+<div class="modal fade" tabindex="-1" role="dialog" id="playerMaximumAlert">
+  <div class="modal-dialog playerLimitAlert" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h3 class="modal-title" id="exampleModalLabel" style="color:black">Maximum of {{game.playerMaxLimit}} players are allowed per game</h3>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="modal fade" tabindex="-1" role="dialog" id="playerAlreadyInvited">
+  <div class="modal-dialog playerLimitAlert" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="exampleModalLabel2" style="color:black">This player has already been invited</h4>
+      </div>
+    </div>
+  </div>
+</div>
 <div ng-cloak id="cards-container" ng-hide="game.state === 'game ended' || game.state ==='game dissolved'">
   <div id="social-bar-container" class="player_top_margin">
     <player></player>
@@ -21,11 +41,11 @@
 </div>
 <div id="info-container" ng-show="game.state === 'awaiting players'">
   <div id="inner-info">
-    <div class="col-lg-6" style="margin: 0 25%">
+    <div class="col-lg-6" style="margin: 15% 25%">
       <div class="input-group">
         <input type="text" class="form-control" placeholder="Search for friends to invite">
         <span class="input-group-btn">
-          <button class="btn btn-default" type="button">Invite</button>
+          <button class="btn btn-default"  type="button" ng-click="sendInvite()">Invite</button>
         </span>
       </div>
     </div>
