feature(player-invitaion): add search functionality

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,6 +6,16 @@
      font-family: 'entypo', sans-serif;
  }
 
+ .search-result:hover {
+   background-color: lightblue;
+ }
+
+ .search-result {
+   color: black;
+   padding: 2px 10px;
+   cursor: pointer;
+ }
+
  .modal-header {
    text-align: center;
  }
