--- a/public/css/common.css
+++ b/public/css/common.css
@@ -745,7 +745,8 @@ body {
           right: 10%;
           width: 80%;
           height: 50px;
-          margin-top: 5%; }
+          margin-top: 5%;
+          }
           #main-container #app-container #gameplay-container #czar-blank-container #czar-blank-inner #smaller-text {
             font-size: 18px; }
         #main-container #app-container #gameplay-container #czar-blank-container #charity-fact-container {
