--- a/public/views/answers.html
+++ b/public/views/answers.html
@@ -70,10 +70,14 @@
   </div>
 </div>
 <div id="czar-blank-container" ng-show="isCzar() && game.table.length===0 && game.state !== 'game dissolved' && game.state !== 'awaiting players'">
+  <div class="alert alert-info thick-red-border">
+   <p style="color:purple">click the deck below to draw next question<p>
+    <img src='/img/card-deck-1.gif' width="150px" height="80px" ng-click="alert('wao')"/>
+</div>
   <div id="czar-blank-inner">
     You are the Card Czar. <br>
     <span id="smaller-text">Players are choosing their answers. Prepare to select a winner.</span>
-  </div>
+  </div> <br/> <br/> <br/>
   <div id='charity-fact-container'>
     <div id='charity-fact-tagline'>Did you know?</div>
 
