feature(design): modify navbar

--- a/public/views/app.html
+++ b/public/views/app.html
@@ -1,33 +1,53 @@
-</script>
+<hr>
 <div id="app-container" ng-controller="GameController">
   <div id="menu-container">
-    <div id="logo">
-      <span id="first-word">Cards</span>
-      <span id="second-word"> for</span>
-      <span id="third-word">Humanity</span>
+    <div id="logo" class="container">
+      <div class="row">
+        <div class="col s4 white-text">
+          <span id="first-word">Cards</span>
+          <span id="second-word"> for</span>
+          <span id="third-word">Humanity</span>
+        </div>
+        <div class="col s6 pull-right">
+          <div class="col s4">
+            <button class="btn col s10" id='abandon-game-button' ng-click="abandonGame()">Abandon Game</button>
+          </div>
+          <div class="col s8">
+            <div id="tweet-container">
+              <a href="https://twitter.com/share" class="btn twitter-share-button" data-url="http://cfh.io" data-text="Cards for Humanity: A Game for Horrible People Desperately Trying to do Good" data-related="CFH_App">Tweet</a>
+            <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
-    <div id = 'abandon-game-button' ng-click="abandonGame()">
-        Abandon Game
-    </div>
-        <span id="tweet-container">
-      <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://cfh.io" data-text="Cards for Humanity: A Game for Horrible People Desperately Trying to do Good" data-related="CFH_App">Tweet</a>
-    <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
-    </span>
   </div>
-  <div id="gameplay-container">
-    <div id="upper-gameplay-container">
-      <div id="menu-timeremaining-container">
-        <div id="menu-container">
-          <span id="menu-button">Menu</span>
+  <div class="container">
+      <div id="menu-container" class="white-text">
+        <span id="menu-button">Menu</span>
+      </div>
+  </div>
+
+  <div class="container">
+    <div class="row">
+      <div class="col s10">
+        <div class="row">
+          <div class="col s3">
+            <timer></timer>
+          </div>
+          <div class="col s9" id="question-border">
+            <question></question>
+          </div>
         </div>
-        <div id="timer-container">
-          <timer></timer>
+        <div class="row">
+          <div class="col s12">
+            <answers></answers>
+          </div>
         </div>
       </div>
-      <div id="question-container-outer">
-        <question></question>
+      <div class="col s2">
+        <player></player>
       </div>
     </div>
-    <answers></answers>
   </div>
 </div>
