feature(design): modify answers screen

--- a/public/views/answers.html
+++ b/public/views/answers.html
@@ -1,6 +1,6 @@
 <div ng-cloak id="cards-container" ng-hide="game.state === 'game ended' || game.state ==='game dissolved'">
   <div id="social-bar-container">
-    <player></player>
+    <!--<player></player>-->
   </div>
   <div id="cards" class='hand'>
 
@@ -25,16 +25,16 @@
   </div>
 </div>
 
-<div id="info-container" ng-show="game.state === 'awaiting players'">
-  <div id="inner-info">
-    <div id="lobby-how-to-play">How To Play</div>
-    <ol id="oh-el">
+<div class="row" id="info-container" ng-show="game.state === 'awaiting players'">
+  <div id="inner-info" class="col s8 offset-s2 white-text">
+    <div id="lobby-how-to-play"><b>How To Play</b></div>
+    <ul id="oh-el">
       <li>Each player begins with, and will always have, 10 white answer cards.</li>
       <li>For each round, one player is randomly chosen as the Card Czar.</li>
       <li>Everyone else answers the black question card by clicking on the answer card they want to use.</li>
       <li>The Card Czar then picks a favorite answer, and whoever played that answer wins the round.</li>
       <li>*Want to adorn your avatar with a glorious crown? Donate to charity after the game!</li>
-    </ol>
+    </ul>
   </div>
 </div>
 <div id="game-end-container" ng-show="game.state === 'game ended' || game.state ==='game dissolved'">
