--- a/public/views/index.html
+++ b/public/views/index.html
@@ -26,14 +26,8 @@
 </ul>
     </div>
   </div>
+</div>
 <!-- Fixed Logo & Menu Bar End -->
-
-<!-- Landing Start -->
-
-
-
-<!-- Landing End -->
-
 
 <!-- How to Play Start -->
 <div class="frame col-md-12" ng-controller="carousel">
