Fix Abandon game button

--- a/public/views/app.html
+++ b/public/views/app.html
@@ -26,7 +26,7 @@
 </a>
 </li>
 <li>
-  <div id='abandon-game-button' class="btn abandon_game_button" ng-click="abandonGame()">
+  <div id='abandon-game-button' ng-controller="GameController" class="btn abandon_game_button" ng-click="abandonGame()">
     Abandon Gaming
   </div>
 </li>
