--- a/public/views/index.html
+++ b/public/views/index.html
@@ -7,12 +7,12 @@
     </div>
     <div class="col-md-3"></div>
     <div class="col-md-6 col-xs-12 nav navmenu">
-                    <ul class="wpb-main-menu">
-                <li>
-                  <a href=""  onClick="scroll(0,0)">Home</a>
-</li>
-<li>
-  <a href="" onClick="scroll(0,1411);">Charity</a>
+      <ul class="wpb-main-menu">
+        <li>
+          <a href="./">Home</a>
+        </li>
+        <li>
+          <a onClick="scroll(0,1411);" id="charity-link">Charity</a>
 </li>
 <span ng-show="showOptions">
                   <li><a href="#!/signup">Sign Up</a></li>
@@ -22,10 +22,10 @@
                   <li><a href="/signout">Sign Out</a></li>
                 </span>
 
-              <li><a href="/play"><button class="play_button btn"> Play </button</a></li>
+<li><a href="/play"><button class="play_button btn"> Play </button</a></li>
 </ul>
-    </div>
-  </div>
+</div>
+</div>
 </div>
 <!-- Fixed Logo & Menu Bar End -->
 
@@ -88,7 +88,7 @@
                           'https://www.facebook.com/sharer/sharer.php?u='+encodeURIComponent(location.href),
                           'facebook-share-dialog',
                           'width=626,height=436');
-                        return false;"> <img src="img/facebook.png"/>
+                        return false;"> <img src="img/facebook.png" />
 </a>
 </span>
 </span>
@@ -98,7 +98,7 @@
 <!-- Donation Info End -->
 
 <!-- About Us Start -->
-<div class="row" id="charity" >
+<div class="row" id="charity">
   <div class="row">
     <div>
       <p class="give">
@@ -119,7 +119,7 @@
       </div>
     </div>
     <div class="col-md-5">
-      <div class="some-text" >
+      <div class="some-text">
         <p> We're quite sure you feel the same way, so we've integrated donation widgets
           (via <a href="http://www.crowdrise.com/cfhio/fundraiser/cards4humanity">crowdrise.com</a>),
           along with some not-so-subtle reminders throughout the game to give you
@@ -148,10 +148,10 @@
 
 </div>
 <div class="wpb-bottom-bar">
-    <div class="text-center footer_privacy">
-      <a href="https://github.com/cardsforhumanity/cardsforhumanity"><img src="img/github.png" id="gitcat"></a>
-      <a href="/#!/privacy">Privacy Policy</a>
-    </div>
+  <div class="text-center footer_privacy">
+    <a href="https://github.com/cardsforhumanity/cardsforhumanity"><img src="img/github.png" id="gitcat"></a>
+    <a href="/#!/privacy">Privacy Policy</a>
   </div>
+</div>
 <!-- Footer End -->
 </div>
