--- a/public/views/signin.html
+++ b/public/views/signin.html
@@ -1,33 +1,30 @@
-<div id="main-bod" ng-controller="IndexController">
+<div landing id="main-bod">
   <!-- Fixed Logo & Menu Bar Start -->
-  <div id="top-part">
-    <div class="wpb-top-bar">
-      <div class="mod-contain" id="navver">
-        <div class="row">
-          <!-- Logo -->
-          <div class="wpb-logo-container">
-            <div id="landing-logo"> 
-              <span id="first-word">Cards</span>
-              <span id="second-word"> for</span> 
-              <span id="third-word">Humanity</span> 
-            </div> 
-            <div class="col-md-9 wpb-menu-container">
-              <ul class="wpb-main-menu">
-                <li><a href="/">Home</a></li>
-              </ul>
-            </div>
-          </div>      
-        </div>
-      </div>
+  <div landing id="main-bod">
+  <!-- Fixed Logo & Menu Bar Start -->
+  <div class="navigationDiv row ">
+    <div class="col-md-3 col-xs-12">
+      <h2 class="text-center logo_head"><a href='./'>Cards For Humanity</a></h2>
     </div>
-  </div>
+    <div class="col-md-3"></div>
+    <div class="col-md-6 col-xs-12 nav navmenu">
+      <ul class="wpb-main-menu">
+        <li>
+          <a href="./">Home</a>
+        </li>
+
+<li><a href="/play"><button class="play_button btn"> Play </button</a></li>
+</ul>
+</div>
+</div>
+</div>
 <!-- Fixed Logo & Menu Bar End -->
 
 <!-- Landing Start -->
 <div class="wpb-teaser parallax-background" id="homer">
-  <div class="background-opacity"></div> 
+  <div class="background-opacity"></div>
   <div class="modified-container">
-    <div class="row" id="main-text"> 
+    <div class="row" id="main-text">
     <!-- Teaser Text Start -->
     <div id="landing-logo">
       <h2 id="slogan">Sign in with:</h2>
@@ -44,7 +41,7 @@
           <div class="sign-error" ng-show="showError() === 'invalid'">
             Please check your username/password and try again.
           </div>
-          <form class="signup form-horizontal" action="/users/session" method="post">
+          <form class="form-horizontal" action="/users/session" method="post">
             <div class="control-group">
               <label for="email" class="control-label"></label>
               <div class="controls">
