chore(feature): modify events and functions for czar to draw cards

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1489,6 +1489,21 @@
 text-align: center !important;
 margin:0 auto !important;
 }
+.draw-card-icon{
+  background-image:url('../img/deck-card.png');
+  background-repeat:no-repeat;
+  background-size:contain;
+  background-position:center;
+  height: 200px;
+  cursor: pointer;
+  /*background-color:deeppink;*/
+}
+
+.text-center{
+  text-align: center;
+  color:white;
+}
+
 
 /* login & signup page */
 
