--- a/public/views/timer.html
+++ b/public/views/timer.html
@@ -1,6 +1,7 @@
 <div id = "inner-timer-container" class="timer_top">
-  <span id="timer-status-round" ng-hide="game.state === 'winner has been chosen' || game.state === 'waiting for czar to decide'"> Time Remaining</span>
+  <span id="timer-status-round" ng-hide="game.state === 'winner has been chosen' || game.state === 'waiting for czar to decide' || game.state==='waiting for czar to draw cards' "> Time Remaining</span>
   <span id="timer-status-czar-choosing" ng-show="game.state === 'winner has been chosen'"> Next Round In</span>
   <span id="timer-status-czar-choosing" ng-show="game.state === 'waiting for czar to decide'"> Czar Choosing</span>
+  <span id="timer-status-czar-choosing" ng-show="game.state === 'waiting for czar to draw cards'"> Czar Drawing Cards</span>
   <div id="time" ng-bind="game.time"></div>
 </div>
