feature(redesign-auth-screen): install bower hellojs

--- a/app/views/includes/foot.jade
+++ b/app/views/includes/foot.jade
@@ -40,3 +40,6 @@ script(type='text/javascript', src='/socket.io/socket.io.js')
 
 //Livereload script rendered
 //script(type='text/javascript', src='http://localhost:35729/livereload.js')
+
+//HelloJS
+script(type='text/javascript', src='/lib/hello/dist/hello.all.min.js')
